# kindle-chess

./: .release-please-manifest.json  README.md  flash.sh  flash_display.sh  flash_usb.sh  release-please-config.json  run-dev.sh
.github/workflows/: release-please.yml  release.yml  rust.yml
display/: .env.debug  .env.release  Cargo.toml  build.rs
display/src/: main.rs
display/src/display/: kindle_display.rs
kindle_KUAL/: safe-test-scripts.sh
kindle_KUAL/extension/: menu.json
kindle_KUAL/extensions/hellokindle/: menu.json
kindle_KUAL/hellokindle/: app_test.sh  chess_app.sh  display_test.sh  eips-test.sh  eips_test.sh  oldx11test.sh  safe-test-outh.sh  settings.toml  x11test.sh
kindle_KUAL/hellokindle/secrets/: token.json
kindle_chess/: .env.debug  .env.release  CHANGELOG.md  Cargo.toml  build.rs
kindle_chess/src/: main.rs  ui.rs  version.rs
kindle_chess/src/api/: api.rs  board.rs  examples.rs  github.rs  mod.rs  models.rs  oauth.rs  update.rs
kindle_chess/src/app/: app.rs  chess.rs  game.rs  mod.rs
kindle_chess/src/examples/: examples.rs
kindle_chess/src/local/: board.rs
kindle_chess/src/models/: app.rs  bitboard.rs  board.rs  board_api.rs  board_local.rs  chess.rs  game.rs  mod.rs  oauth.rs  puzzle.rs  ui.rs
kindle_chess/src/ui/: app.rs  chess.rs  display.rs  events.rs  lib.rs  mod.rs  renderer.rs  screens.rs  widgets.rs
kindle_chess/src/ui/widgets/: board.rs  button.rs  sidebar.rs
kindle_chess_ui/: README.MD
kindle_chess_ui/src/: app.rs  mod.rs  renderer.rs
kindle_chess_ui/src/widgets/: board.rs  sidebar.rs
kindli_chess/: Cargo.toml
kindli_chess/src/: api.rs  main.rs  models.rs
kindli_chess/src/api/: models.rs  oauth.rs
test_scripts/: Cargo.toml
