[package]
name = "kindle-x11-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# When default-features = false, x11rb uses pure Rust automatically!
x11rb = { version = "0.13", default-features = false }
log = "0.4"
env_logger = { version = "0.11", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
