[package]
name = "kindli_hello"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
exitfailure = "0.5.1"
local-ip-address = "0.6.5"
log = "0.4.27"
log4rs = "1.3.0"
oauth2 = "5.0.0"
qrcode = "0.14.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"]}

[[bin]]
name = "kindle-hello"
path = "src/main.rs"
