[package]
name = "kindli_chess"
version = "0.1.0"
edition = "2026"

[dependencies]
axum = "0.8.4"
exitfailure = "0.5.1"
env_logger = { version = "0.11", default-features = false }
fontdue = "0.9"
image = "0.25.8"
futures = "0.3.31"
local-ip-address = "0.6.5"
log = "0.4.27"
log4rs = "1.3.0"
oauth2 = "5.0.0"
qrcode = "0.14.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "stream"]}
reqwest-streams = { version = "0.12.0", features=["json"] }
semver = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"
tower-http = { version = "0.5", features = ["cors"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"]}
x11rb = { version = "0.13", default-features = false }
dotenv = "0.15"


[build-dependencies]
dotenv = "0.15"

[[bin]]
name = "kindle-hello"
path = "src/main.rs"
