[package]
name = "kindli_hello"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
exitfailure = "0.5.1"
log = "0.4.27"
log4rs = "1.3.0"
oauth2 = "5.0.0"
reqwest = { version = "0.12.23", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
url = "2.5.7"

[[bin]]
name = "kindle-hello"
path = "src/main.rs"
